# kubetask

./: .gitignore  .pre-commit-config.yaml  README.md  coverage.txt  pyproject.toml  requirements.txt
alembic/: env.py  reset.py
alembic/versions/: 1f30adedb41d_add_stopped_as_a_task_state.py  21f46b3cc285_create_and_add_priority_column_to_task_.py  39b9bff8abac_create_task_instance_model.py  9977e23f0848_create_task_instance_model.py  9e58dd879f3a_rename_task_primary_key.py  a2119e6c3b46_add_task_table.py  a90186f5dca7_remove_priority.py  b37b41aea793_add_priority.py  c1bc280d2aaa_update_task_id.py  cf621ffc9e89_rename_schedule_to_schedule_at.py  f2d273743b04_add_new_task_state.py
backend/alembic/: env.py  reset.py
backend/alembic/versions/: 13e145d443d8_rename_taskinstance_relationship_field.py  1b76078a6c67_add_tasktype_to_differentiate_job_and_.py  8ebc8c77e968_rename_taskinstance_relationship_field.py  cb038d56d9b6_remove_docker_url_and_command_from_task_.py  dd48573797a8_new_model.py
backend/kubetask/: logger.py  main_api.py
backend/kubetask/api/: main.py  process_files.py  validators.py
backend/kubetask/core/: constants.py  task.py
backend/tests/: test_core.py  test_model.py
frontend/: package-lock.json
frontend/src/: App.jsx  SideBar.jsx
k8_sample/: sample_cronjob.yaml  sample_job.yaml
kubetask/: main_api.py
kubetask/api/: constants.py  main.py  process_files.py
kubetask/core/: __init__.py  config.py  constants.py  db.py  task.py  task_instance.py
kubetask/models/: model.py
kubetask/utils/: utils.py
tests/: test_core.py  test_utils.py
(+1 files in other folders)
